   - my_igridlist_get_rows_count(): renamed to my_igridlist_get_details_count().
   - my_igridlist_set_has_row_number(): new function.
   - my_igridlist_set_has_up_down_buttons: new function.
   - ofaClosingParmsBin: implements myIGridlist interface (todo #1370).
   - ofa_itvcolumnable_enable_column(): renamed to ofa_itvcolumnable_set_invisible().
   - Periodicity properties: review UI margins (todo #1366).

-----------------------------------------------------------------------
 Version 0.67
 ============

 Released on 2017-02-21

 Total files count:    790
 Total lines count: 524542

 New features and improvements:

   Core DB Model v35
   Recurrent DB Model v8
   VAT DB Model v7

   - Let the user records any document with any table (todo #1263).
   - Have new keyboard shortcuts for import/export assistants.
   - Account selection does not allow deletion anymore (todo #1349).
   - Accounts are now settleable and reconciliable, and able to allow keeping
     unsettleable and unreconciliable entries.
   - Accounts chart: display the newly created page when creating an account with new class.
   - Accounts treeview: indicators are now centered in the column.
   - Administrative credentials are now recorded as dossier settings.
   - Conciliation groups are now archived on exercice closing (todo #601).   
   - DossierManager better behaves when the list is empty, disabling all unrelevant actions.
   - DossierManager no more has two identical 'Close' buttons.
   - DossierManager no more allows (there is no sense to that) to check/uncheck the 'Remember'
     button when deleting a period.
   - Entry and Reconciliation pages are optimized when loading entries (todo #1292).
   - Entries have now a rule indicator to distinguish forward and closing entries (todo #1228).
   - ExerciceCloseAssistant closes the opened pages before working.
   - ExerciceMetaBin no more forces a new dossier to have a current exercice.