@@ -272,7 +272,7 @@
                 <property name="transition_type">none</property>
                 <property name="reveal_child">True</property>
                 <child>
-                  <object class="GtkGrid">
+                  <object class="GtkGrid" id="ext-grid">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="row_spacing">2</property>
